# uEngine4

./: .gitignore  .gitmodules  README.md  install_for_linux.sh  install_for_windows.bat
code/: CMakeLists.txt
code/apps/: CMakeLists.txt
code/apps/cereal_example/: CMakeLists.txt
code/apps/example_app/: CMakeLists.txt  sdl_touch_service.cpp  sdl_touch_service.h
code/apps/falling_letters/: CMakeLists.txt  falling_letters_app.cpp  falling_letters_app.h  falling_letters_graphics_app.cpp  falling_letters_graphics_app.h
code/apps/gis_example/: main.cpp
code/apps/gl_example/: CMakeLists.txt  gl_graphic_app.h  main.cpp  sdl_application_configuration.json
code/apps/sdl_example/: CMakeLists.txt  SampleSpriteSheetConfig.json  primitive_sample.cpp  sdl_input_sample.h  sdl_painter_sample.cpp  sdl_sprite_sample.cpp  sdl_sprite_sample.h  sdl_sprite_sheet_sample.cpp  sdl_texture_sample.cpp  sdl_tile_map_sample.h
code/apps/sdl_map_example/: CMakeLists.txt  map_view.cc  sdlmap.cc  tile_downloader.cc  tile_downloader.h
code/basic_engine/: CMakeLists.txt
code/basic_engine/basic_engine/: camera.cpp  common.h  sprite_parameter.h  transformation.cpp  transformation.h
code/basic_engine/painter/: brush.h  gfx_primitives.h  painter.cpp  painter.h  pen.cpp  pen.h  roto_zoom.cpp
code/basic_engine/sprite_sheet/: animation.cpp  animation.h  common.h  sprite_sheet.cpp  sprite_sheet_parameters.h  sprite_sheet_serializer.h
code/basic_engine/tile_map/: animated_tile.h  image_layer.cpp  object_layer.cpp  tile_layer.cpp  tile_layer.h  tile_map.h
code/cmake/: CommonFunctions.cmake  CompilerOptions.cmake  FolderOptions.cmake
code/ext/: CMakeLists.txt  README_devil.md
code/ext/cereal-1.3.2/: cereal-config.cmake
code/ext/devIL-1.8.0/: readme.txt
code/ext/glew-2.2.0/: install_glew_for_linux.sh  install_glew_for_win.bat
code/ext/glm/: CMakeLists.txt  manual.md  readme.md
code/gis/: CMakeLists.txt
code/gis/cmake/: core_gis_files.cmake
code/gis/core_gis/: common.h  geo_point.h  geographic_gl_view.h  gis_meta_data.h  layer.cpp  layer_configuration.h  layer_configurator.cpp  layer_configurator.h  layer_factory.h  layer_management.cpp  layer_renderer.h  layer_service.h  layer_status.h  main.cpp  map_view.cpp  map_view.h  raster_common.h  raster_controller.h  tile_tms.h  vector_layer_metadata.h
code/gis/gis_asset/: gis_map_asset.cpp  gis_map_loader.h
code/gis/pager/: gtile_file_calculator.h  pager.h  pager_listener.h  pager_reference.cpp  pager_reference.h  pager_service.h  tile_name_calculator.h
code/gl/: CMakeLists.txt
code/gl/cmake/: gl_painter_files.cmake  gl_texture_files.cmake
code/gl/gl_core_loaders/: dds_texture_loader.h  generic_texture_loader.cpp  stb_image_loader.h
code/gl/gl_painter/: blend_factor.h  brush.h  brush_stippling_data.h  color_ramp.h  geometry_type.h  gl_basic_painter.cpp  gl_basic_painter.h  gl_font.cpp  gl_font.h  gl_sprite_sheet.h  gl_texture.cpp  pen.cpp  pen.h  pen_style.h  simple_geometry.cpp  simple_geometry.h
code/gl/gl_texture/: pixel_format.h  texture_asset.cpp  texture_bpp.h  texture_info.h
code/infra/: CMakeLists.txt
code/infra/application_base/: application_base.h  gamepad_data.h  gamepad_event_listener.h  input_actions.h  keyboard_codes.h  keyboard_event_listener.h  keyboard_modifiers.h  mouse_buttons.h  touch_event_handler.h  window_parameter.h  window_parameter_serializer.h
code/infra/asset/: asset_common.h  asset_loader.h  asset_repository.cpp  asset_repository.h  asset_service.h  asset_tester.cpp
code/infra/cmake/: application_base_files.cmake  asset_files.cmake  concurrency_files.cmake  graphic_files.cmake  imgui_files.cmake  time_files.cmake
code/infra/concurrency/: active_object.h  basic_thread_pool.h  thread_base.cpp  thread_pool.cpp  thread_pool.h
code/infra/graphics/: color_serializer.h  envelope.cpp  envelope.h  intersection_result.h  point.h  polygon.cpp  polygon_triangulator.cpp  projection_result.h  rectangle.h  rectangle_serializer.h
code/infra/sdl_application/: sdl_application.cpp  sdl_gamepad_controller.cpp  sdl_gamepad_controller.h  sdl_parameters_serializer.h  sdl_touch_service.cpp  sdl_touch_service.h
code/infra/sdl_asset/: sdl_texture_asset.cpp  sdl_texture_asset.h  sdl_texture_loader.cpp
code/infra/tick/: fps_ticker.h  game_ticker.cpp  periodic_ticker.h  tickable.h
code/infra/time/: chrono_util.cpp  chrono_util.h  fps_timer.cpp  stoppable_timer.cpp  threaded_timer.cpp  threaded_timer.h  timestamp.h
code/infra/utility/: file_operations.cpp  file_operations.h  json_data_parser.h  less_by_pairs.h  parameter_set.cpp  unique_id_generator.h
code/lib/: assetd.lib  cereal_exampled.lib  concurrencyd.lib  falling_lettersd.lib  gis_exampled.lib  gl_exampled.lib  gmapd.lib  graphicsd.lib  gtest_main_windows_debug.lib  gtest_maind.lib  pagerd.lib  sdl_exampled.lib
code/project/vs2022/: selectedRuleSet.ruleset
code/project/vs_property_sheets/: uEngine_BasicEngine.props  uEngine_Cereal.props  uEngine_CoreGIS.props  uEngine_ExecutableDebug.props  uEngine_ExecutableRelease.props  uEngine_Fmt.props  uEngine_GLEW.props  uEngine_Infra.props  uEngine_SDL2.props  uEngine_StaticLibraryDebug.props  uEngine_StaticLibraryRel.props  uEngine_UserMacros.props  uEngine_glm.props  uEngine_googleTest.props  uEngine_spdlog.props  uEngine_tileson.props
code/scripts/: buildNinja.bat  buildVs.bat  cleanBuildNinja.bat  rebuildLinux.sh
code/src/: CMakeLists.txt  CMakePresets.json  build.bat  buildNinjaWithDep  buildWithSDLPaths.bat  prepareSDLAndProjectForWin.bat
code/src/apps/: CMakeLists.txt
code/src/basic_engine/: CMakeLists.txt
code/src/cmake/: CommonFunctions.cmake  CompilerOptions.cmake  FolderOptions.cmake  InsourceGuard.cmake  OpenGLOptions.cmake  StandardOptions.cmake  TargetOSSetup.cmake
code/src/example_app/: CMakeLists.txt  example_app.cpp
code/src/ext/: CMakeLists.txt  README_devil.md  README_freeglut.md  thirdpartylibs.sh
code/src/gis/: CMakeLists.txt
code/src/gl/: CMakeLists.txt
code/src/infra/: CMakeLists.txt
code/src/scripts/: buildLinux.sh  buildNinja.bat  buildVs.bat  prepareLinux.sh
(+2496 files in other folders)
