# Include sub-projects.
add_subdirectory ("application_base")
add_subdirectory ("concurrency")
add_subdirectory ("data_structures")
add_subdirectory ("graphics")
add_subdirectory ("im_gui")
add_subdirectory ("sdl_application")
add_subdirectory ("tick")
add_subdirectory ("time")
add_subdirectory ("utility")